# yt-dlp-bot

./: .dockerignore  .editorconfig  .env  .gitignore  .ruff.toml  LICENSE  README.md  RELEASES.md  alembic.ini  apk_mirrors  base.Dockerfile  docker-compose.yml  pyproject.toml  start.py  start.sh
.releases/: release_0.3.1.md  release_0.3.md  release_0.4.md  release_0.5.md  release_0.6.md  release_0.7.md  release_0.8.md  release_0.9.md  release_1.0.md
alembic/: env.py
api/: Dockerfile  main.py  requirements.txt
api_app/: Dockerfile
app_api/: Dockerfile  main.py  pyproject.toml  requirements.txt
app_bot/: Dockerfile  config-example.yml  main.py  pyproject.toml  requirements.txt
app_cron/: .env.example  Dockerfile  cron.py  crontab
app_worker/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
yt_shared/: pyproject.toml  requirements_shared.txt  setup.py
yt_shared/src/yt_shared/: config.py  constants.py  enums.py
yt_shared/src/yt_shared/clients/: github.py
yt_shared/src/yt_shared/db/: session.py
yt_shared/src/yt_shared/models/: __init__.py  cache.py  task.py
yt_shared/src/yt_shared/rabbit/: __init__.py  rabbit.py  rabbit_config.py
yt_shared/src/yt_shared/repositories/: task.py  ytdlp.py
yt_shared/src/yt_shared/schemas/: base.py  base_rabbit.py  cache.py  media.py  url.py
yt_shared/src/yt_shared/utils/: common.py  file.py
yt_shared/src/yt_shared/utils/tasks/: abstract.py  tasks.py
yt_shared/yt_shared/: config.py  constants.py  db.py  emoji.py  enums.py  utils.py
yt_shared/yt_shared/clients/: github.py
yt_shared/yt_shared/db/: session.py
yt_shared/yt_shared/models/: __init__.py  cache.py  task.py  yt_dlp.py
yt_shared/yt_shared/rabbit/: __init__.py  publisher.py  rabbit.py  rabbit_config.py
yt_shared/yt_shared/repositories/: task.py  ytdlp.py
yt_shared/yt_shared/schemas/: base.py  base_rabbit.py  cache.py  error.py  media.py  success.py  url.py  video.py  ytdlp.py
yt_shared/yt_shared/task_utils/: tasks.py
yt_shared/yt_shared/utils/: common.py  file.py  user.py
yt_shared/yt_shared/utils/tasks/: abstract.py  tasks.py
yt_shared/yt_shared/ytdlp/: version_checker.py
(+207 files in other folders)
