[project]
name = "yt-shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tropicoo", email = "888784+tropicoo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.4",
    "aiohttp>=3.11.11",
    "asyncpg>=0.30.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-utils>=0.41.2",
    "uvloop>=0.21.0 ; sys_platform == 'linux'",
]

[project.scripts]
yt-shared = "yt_shared:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
